update the API docs
